--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goob Station | Privacy Policy</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="https://raw.githubusercontent.com/Goob-Station/Goob-Station/refs/heads/master/Resources/Textures/Logo/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Goob-Station/Goob-Station/refs/heads/master/Resources/Textures/Logo/icon.ico" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
