--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="https://raw.githubusercontent.com/Goob-Station/Goob-Station/refs/heads/master/Resources/Textures/Logo/icon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Goob-Station/Goob-Station/refs/heads/master/Resources/Textures/Logo/icon.ico" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://privacy.goobstation.com/">
+    <meta property="og:title" content="Goob Station Privacy Policy">
+    <meta property="og:description" content="Privacy policy for Goob Station's SS14 game servers">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Goob-Station/Goob-Station/refs/heads/master/Resources/Textures/Logo/icon/icon-256x256.png">
 </head>
 <body>
     <script src="parallax.js"></script>
