GDPR Specific Info

--- a/index.html
+++ b/index.html
@@ -144,6 +144,54 @@
                 </ul>
             </ul>
         </div>
+        <div class="gdpr">
+            <h1>GDPR Specific Info</h1>
+        </div>
+
+        <div class="policy-section">
+            <h2>Your GDPR Rights</h2>
+            <p>EU residents have the right to:</p>
+            <ul>
+                <li>Request access to personal data</li>
+                <li>Rectify inaccurate information</li>
+                <li>Erase data under certain conditions</li>
+                <li>Restrict processing of your data</li>
+                <li>Data portability</li>
+                <li>Object to processing</li>
+            </ul>
+            <p>Submit requests to: <a href="mailto:goobstation14@gmail.com">goobstation14@gmail.com</a></p>
+        </div>
+        
+        <div class="policy-section">
+            <h2>Lawful Basis for Processing</h2>
+            <p>Under GDPR, we process data based on:</p>
+            <ul>
+                <li><strong>Contractual Necessity:</strong> Account data required to provide services</li>
+                <li><strong>Legitimate Interests:</strong> Security monitoring and fraud prevention</li>
+                <li><strong>Consent:</strong> Optional features like Discord integration</li>
+            </ul>
+        </div>
+
+        <div class="policy-section">
+            <h2>Data Transfers</h2>
+            <p>Data may be transferred outside the EU to:</p>
+            <ul>
+                <li>Our hosting providers in the United States</li>
+                <li>Third-party services like Discord and IPIntel</li>
+            </ul>
+            <p>We ensure transfers comply with GDPR through:</p>
+            <ul>
+                <li>EU Standard Contractual Clauses</li>
+                <li>Data processor agreements</li>
+                <li>Privacy Shield certified partners (where applicable)</li>
+            </ul>
+        </div>
+
+        <div class="policy-section">
+            <h2>Security Incidents</h2>
+            <p>We will notify affected EU users within 72 hours of becoming aware of a data breach that risks their rights and freedoms. This will be done through our announcement channel in our public Discord, which can be accessed <a href="https://discord.com/servers/goob-station-1202734573247795300">here</a>.</p>
+        </div>
+
     </div>
     <div class="footer">
         <p>Contact us at <a href="mailto:goobstation14@gmail.com">goobstation14@gmail.com</a> for inquiries.</p>
