--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <div class="header">
             <h1>Game Server Privacy Policy</h1>
-                <strong>Last Updated: March 13th, 2025</strong>
+                <strong>Last Updated: March 25th, 2025</strong>
                 <br>
-                Our game servers now check IP addresses with IPIntel to detect VPNs and approximate geolocation.
+                We have a new contact email.
         </div>
 
 
@@ -159,7 +159,7 @@
                 <li>Data portability</li>
                 <li>Object to processing</li>
             </ul>
-            <p>Submit requests to: <a href="mailto:goobstation14@gmail.com">goobstation14@gmail.com</a></p>
+            <p>Submit requests to: <a href="mailto:administrator@goobstation.com">administrator@goobstation.com</a></p>
         </div>
         
         <div class="policy-section">
@@ -194,7 +194,7 @@
 
     </div>
     <div class="footer">
-        <p>Contact us at <a href="mailto:goobstation14@gmail.com">goobstation14@gmail.com</a> for inquiries.</p>
+        <p>Contact us at <a href="mailto:administrator@goobstation.com">administrator@goobstation.com</a> for inquiries.</p>
     </div>
 </body>
 </html>
