--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Game Server Privacy Policy</h1>
                 <strong>Last Updated: March 25th, 2025</strong>
                 <br>
-                We have a new contact email.
+                We have a new contact email, for future reference contact us at <a href="mailto:administrator@goobstation.com">administrator@goobstation.com</a>.
         </div>
 
 
