--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <div class="header">
             <h1>Game Server Privacy Policy</h1>
-                <strong>Last Updated: March 25th, 2025</strong>
+                <strong>Last Updated: December 25th, 2025</strong>
                 <br>
-                We have a new contact email, for future reference contact us at <a href="mailto:administrator@goobstation.com">administrator@goobstation.com</a>.
+                Added Data Retention section, expanded Lawful Basis for Processing, clarified limitations on data erasure requests, and updated Data Transfers and Security Incidents sections for GDPR compliance.
         </div>
 
 
@@ -160,6 +160,16 @@
                 <li>Object to processing</li>
             </ul>
             <p>Submit requests to: <a href="mailto:administrator@goobstation.com">administrator@goobstation.com</a></p>
+
+            <h3>Limitations on Data Erasure</h3>
+            <p>You may request deletion of your personal data. However, under GDPR Article 17, we may refuse erasure requests where data is required for:</p>
+            <ul>
+                <li>Moderation and rule enforcement</li>
+                <li>Security and abuse prevention</li>
+                <li>Ban enforcement, including active bans and permanent bans</li>
+                <li>Maintaining moderation history that remains necessary for enforcement or contextual review</li>
+            </ul>
+            <p>Character data and other non-essential gameplay data may be deleted by you at any time, as this data is not required for moderation or enforcement purposes.</p>
         </div>
         
         <div class="policy-section">
@@ -167,7 +177,7 @@
             <p>Under GDPR, we process data based on:</p>
             <ul>
                 <li><strong>Contractual Necessity:</strong> Account data required to provide services</li>
-                <li><strong>Legitimate Interests:</strong> Security monitoring and fraud prevention</li>
+                <li><strong>Legitimate Interests:</strong> Security monitoring, fraud prevention, moderation, rule enforcement, maintaining moderation history, detecting repeat or escalating violations, preventing ban evasion, abuse investigation, and handling appeals. Retention of historical moderation records is necessary to ensure fair, consistent, and effective enforcement across our community.</li>
                 <li><strong>Consent:</strong> Optional features like Discord integration</li>
             </ul>
         </div>
@@ -181,15 +191,26 @@
             </ul>
             <p>We ensure transfers comply with GDPR through:</p>
             <ul>
-                <li>EU Standard Contractual Clauses</li>
-                <li>Data processor agreements</li>
-                <li>Privacy Shield certified partners (where applicable)</li>
+                <li>EU Standard Contractual Clauses (SCCs)</li>
+                <li>Appropriate data processing agreements</li>
             </ul>
         </div>
 
         <div class="policy-section">
+            <h2>Data Retention</h2>
+            <p>We retain different types of data for different purposes:</p>
+            <ul>
+                <li><strong>Gameplay and chat logs:</strong> Retained for up to 30 days to support moderation review and incident investigation. Logs are automatically deleted after this period unless they are part of an active moderation case.</li>
+                <li><strong>Moderation records:</strong> Records such as bans, warnings, and administrative notes are retained as long as they are necessary for moderation, rule enforcement, abuse prevention, and maintaining the integrity of the service. This includes historical records of previous bans and warnings, which help moderators understand patterns of behavior and ensure consistent enforcement.</li>
+                <li><strong>Permanent bans:</strong> Treated as ongoing enforcement actions and retained for as long as necessary for moderation and enforcement purposes.</li>
+                <li><strong>Hardware identifiers (HWIDs) and connection identifiers (such as IP addresses):</strong> Retained where necessary to enforce bans, prevent ban evasion, and protect the integrity of the service. These identifiers are used solely for enforcement and security purposes, and are not used for marketing, profiling, or advertising.</li>
+            </ul>
+            <p>We do not retain data longer than necessary for its stated purpose.</p>
+        </div>
+
+        <div class="policy-section">
             <h2>Security Incidents</h2>
-            <p>We will notify affected EU users within 72 hours of becoming aware of a data breach that risks their rights and freedoms. This will be done through our announcement channel in our public Discord, which can be accessed <a href="https://discord.com/servers/goob-station-1202734573247795300">here</a>.</p>
+            <p>We will notify affected EU users within 72 hours of becoming aware of a data breach that risks their rights and freedoms. Affected users will be notified directly where feasible. Public announcement channels, such as our <a href="https://discord.com/servers/goob-station-1202734573247795300">Discord server</a>, may be used as a supplementary notification method.</p>
         </div>
 
     </div>
